--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 CHelperReport.txt
 /src/Main.java
 /src/main
+!/src/main/Tmp.java
 
 # Created by .ignore support plugin (hsz.mobi)
 ### Windows template
