--- a/chelper.properties
+++ b/chelper.properties
@@ -1,5 +1,5 @@
 #
-#Mon Nov 14 02:25:22 CST 2016
+#Wed Sep 05 00:00:09 CST 2018
 smartTesting=false
 archiveDirectory=archive
 defaultDirectory=src/main
@@ -8,8 +8,8 @@ outputClass=java.io.PrintWriter
 excludePackages=java.,javax.,com.sun.
 outputDirectory=src
 author=
-libraryMigrated=true
 failOnIntegerOverflowForNewTasks=false
 inputClass=lib.misc.Scanner
 enableUnitTests=false
 testDirectory=src/test
+libraryVersion=2
